@@ -11,6 +11,8 @@ NEW FEATURES
 
 * `annotation_map`
 
+* New fortify methods for objects produced by the `multcomp` package.
+
 * `stat_summary2d` / `stat_summary_hex`. These are arbitrary function version
   of stat_bin2d / stat_binhex. Any summarization (as stat-summary for 1D) can
   be done for 2D.
